[package]
name = "QuiSSH"
version = "0.4.0"
edition = "2020"
build = "src/build.rs"
description = "Adaptation of cloudflare/quiche: removes TLS handshake and HTTP/3; implements direct insertion of key material from SSH; enables SSH over QUIC"
repository = "https://github.com/denisbider/QuiSSH"
readme = "README.md"
keywords = ["ssh", "quic"]
categories = ["network-programming"]
license = "BSD-2-Clause"
include = [
     "/*.md",
     "/*.toml",
     "/COPYING",
     "/benches",
     "/examples",
     "/include",
     "/src",
]

[features]

# Generate pkg-config metadata file
pkg-config-meta = []

# For building with Android NDK < 18 and GCC.
ndk-old-gcc = []

[package.metadata.docs.rs]
default-features = false

[build-dependencies]
cmake = "0.1"

[dependencies]
log = { version = "0.4", features = ["std"] }
libc = "0.2"
libm = "0.2"
ring = "0.16"
lazy_static = "1"
qlog = { version = "0.3", path = "tools/qlog", optional = true }

[target."cfg(windows)".dependencies]
winapi = { version = "0.3", features = ["wincrypt"] }

[dev-dependencies]
mio = "0.6"
url = "1"

[profile.bench]
debug = true

[profile.release]
debug = true

[lib]
crate-type = ["lib", "staticlib", "cdylib"]
